--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
 
     </head>
     <body>
-
-      <div id="badges"></div>
-
+      <ul class="list-unstyled" id="badges"></ul>
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
       <script src="js/vendor/bootstrap.min.js"></script>
