--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+      <script src="js/config.js"></script>
       <script src="js/main.js"></script>
     </body>
 </html>
