gracefully handle server or group errors, display an informative error panel

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     </head>
     <body>
-      <div class="panel panel-warning" id="usage" style="display: none">
-        <div class="panel-heading">Usage</div>
-        <div class="panel-body">
-          /?server=[server IP or name]&group=[optional pipeline group]
+      <div class="container">
+        <div class="panel panel-warning" id="error-panel" style="display: none">
+          <div class="panel-heading">Error</div>
+          <div class="panel-body" id="error-text"></div>
         </div>
       </div>
       <ul class="list-unstyled" id="badges"></ul>
