implement handlebars.js for templating

--- a/index.html
+++ b/index.html
@@ -22,11 +22,20 @@
           <div class="panel-body" id="error-text"></div>
         </div>
       </div>
-      <ul class="list-unstyled" id="badges"></ul>
+      <div id="pipeline-groups">
+        <ul class="list-unstyled" id="badges"></ul>
+      </div>
 
       <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
       <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.3/handlebars.min.js"></script>
+
+      <script id="pipeline-badge-template" type="text/x-handlebars-template">
+        <li class="col-xs-6">
+          <a href="{{link}}" target="_blank" class="btn btn-lg {{btn_class}}">{{name}}</a>
+        </li>
+      </script>
 
       <script src="js/config.js"></script>
       <script src="js/main.js"></script>
