use medium width columns

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </script>
 
       <script id="pipeline-badge-template" type="text/x-handlebars-template">
-        <li class="col-xs-6">
+        <li class="col-md-6">
           <div class="pipeline-badge {{badge_class}}">
             <a href="{{link}}" target="_blank">{{name}}</a>
           </div>
