--- a/index.html
+++ b/index.html
@@ -52,7 +52,11 @@
               <div class="col-xs-8 text-center">
                 <a href="{{link}}" target="_blank">{{name}}</a>
               </div>
-              <div class="col-xs-2"></div>
+              <div class="col-xs-2">
+                {{#if paused}}
+                <span class="glyphicon glyphicon-pause pull-right" aria-hidden="true"></span>
+                {{/if}}
+              </div>
 
             </div>
           </div>
