--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/common.css">
+        <link rel="stylesheet" href="css/wallboard.css">
 
     </head>
     <body>
@@ -60,6 +61,6 @@
       </script>
 
       <script src="js/config.js"></script>
-      <script src="js/main.js"></script>
+      <script src="js/wallboard.js"></script>
     </body>
 </html>
