incorrect URL for label

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -48,7 +48,7 @@
             {{/each}}
           </td>
           <td>
-            <a href="{{instances.[0].label}}" target="_blank">#{{instances.[0].label}}</a> triggered by {{instances.[0].triggered_by}} {{reldate instances.[0].scheduled_time}}
+            <a href="{{instances.[0].vsm_path}}" target="_blank">#{{instances.[0].label}}</a> triggered by {{instances.[0].triggered_by}} {{reldate instances.[0].scheduled_time}}
           </td>
           <td>
             <a href="{{instances.[0].compare_path}}" title="Compare" target="_blank"><span class="glyphicon glyphicon-sound-stereo" aria-hidden="true"></span></a>
