--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
     </td>
     <td>
       {{#if pause_info.is_paused}}
-      <a class="glyphicon glyphicon-step-forward" href="javascript:;" onclick="unpausePipeline('{{available_operations.[2].operation_path}}');" /> {{else}} {{#unless is_building}}
-      <a class="glyphicon glyphicon-play" href="javascript:;" onclick="schedulePipeline('{{available_operations.[0].operation_path}}');" /> {{/unless}}
+      <a class="glyphicon glyphicon-step-forward" href="javascript:;" onclick="postURL('{{available_operations.[2].operation_path}}');" /> {{else}} {{#unless is_building}}
+      <a class="glyphicon glyphicon-play" href="javascript:;" onclick="postURL('{{available_operations.[0].operation_path}}');" /> {{/unless}}
       <a class="glyphicon glyphicon-pause" href="javascript:;" onclick="showPauseModal('{{name}}', '{{available_operations.[2].operation_path}}');" /> {{/if}}
     </td>
   </script>
@@ -118,7 +118,7 @@
     <tr>
       <td>
         <a href='{{url}}' target="_blank">{{name}}</a>
-        <a class="glyphicon glyphicon-remove-circle" href="javascript:;" onclick="cancelStage('{{cancel_url}}');" />
+        <a class="glyphicon glyphicon-remove-circle" href="javascript:;" onclick="postURL('{{cancel_url}}');" />
       </td>
     </tr>
   </script>
@@ -129,7 +129,7 @@
         <strong>{{agent_name}}</strong>
         <span class="label {{status_label_class}}">{{status}}</span> {{#if build_url}}
         <a href="{{build_url}}" target="_blank">{{build_name}}</a>
-        <a class="glyphicon glyphicon-remove-circle" href="javascript:;" onclick="cancelStage('{{cancel_url}}');" /> {{/if}}
+        <a class="glyphicon glyphicon-remove-circle" href="javascript:;" onclick="postURL('{{cancel_url}}');" /> {{/if}}
       </td>
     </tr>
   </script>
