bugfix: do not prepend the server on an already qualified URL

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <script id="scheduled-job-template" type="text/x-handlebars-template">
     <tr>
       <td>
-        <a href='{{serverUrl url}}' target="_blank">{{name}}</a>
+        <a href='{{url}}' target="_blank">{{name}}</a>
         <a class="glyphicon glyphicon-remove-circle" href="javascript:;" onclick="postURL('{{serverUrl cancel_url}}');" />
       </td>
     </tr>
