add favicon link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 
   <link rel="stylesheet" href="css/dashboard.css">
+  <link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
